Updated creating_features notebook

--- a/Creating_Features.ipynb
+++ b/Creating_Features.ipynb
@@ -2236,16 +2236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(57952, 59)"
+       "(57952, 107)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2255,7 +2255,7 @@
     "final_dataset = final_dataset.merge(num_of_past_visits,on='MRN',how='left')\n",
     "final_dataset = final_dataset.merge(procedure_features,right_index=True,left_on='LOG_ID',how='left')\n",
     "#final_dataset = final_dataset.merge(post_op_features,right_index=True,left_on='LOG_ID',how='left')\n",
-    "final_dataset.shape #Avoiding post opeartive features because it has too many features. "
+    "final_dataset.shape #Avoiding post opeartive features because it is an event after the surgery."
    ]
   },
   {
